# CainMusicPlayer

./: gradle.properties  gradlew.bat
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cgfay/cainmusicplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MusicPlayerController.cpp
app/src/main/cpp/CainMusicPlayer/: AudioOutput.cpp  AudioOutput.h  Clock.cpp  Clock.h  FrameQueue.cpp  FrameQueue.h  MediaDecoder.cpp  MediaDecoder.h  MusicPlayer.cpp  MusicPlayer.h  PacketQueue.cpp  PacketQueue.h  endian.h  ffplay_def.h
app/src/main/cpp/SoundTouch/: SoundTouchWrapper.cpp  SoundTouchWrapper.h
app/src/main/cpp/SoundTouch/include/: FIFOSampleBuffer.h  FIFOSamplePipe.h  SoundTouch.h
app/src/main/cpp/common/: Thread.cpp  native_log.h
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  avfft.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  qsv.h  vaapi.h  vda.h  vdpau.h  version.h  videotoolbox.h  vorbis_parser.h  xvmc.h
app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
app/src/main/cpp/ffmpeg/include/libavutil/: attributes.h  audio_fifo.h  avassert.h  avstring.h  avutil.h  base64.h  bprint.h  buffer.h  channel_layout.h  common.h  cpu.h  dict.h  display.h  downmix_info.h  error.h  eval.h  fifo.h  file.h  frame.h  hash.h  hwcontext.h  hwcontext_cuda.h  hwcontext_dxva2.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_vdpau.h  imgutils.h  lfg.h  log.h  mastering_display_metadata.h  mathematics.h  md5.h  mem.h  murmur3.h  opt.h  parseutils.h  pixdesc.h  pixelutils.h  pixfmt.h  random_seed.h  (+15 more)
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/include/libswscale/: swscale.h
app/src/main/cpp/ffmpeg/include/libx264/: x264.h
app/src/main/java/com/cgfay/cainmusicplayer/activity/: MusicPlayActivity.java  MusicSelectActivity.java
app/src/main/java/com/cgfay/cainmusicplayer/media/: CainMusicPlayer.java  Music.java  MusicAdapter.java
app/src/main/java/com/cgfay/cainmusicplayer/utils/: PermissionUtils.java  StringUtils.java
app/src/main/res/layout/: activity_music_play.xml  activity_music_select.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml
app/src/test/java/com/cgfay/cainmusicplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
